--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -13,5 +13,11 @@
     font-weight: 500;
 }
 .form-control{
+    border: 1px solid rgba(95, 163, 14, 0.5);
+    border-radius: 5px;
+    padding: 30px 34px;
+}
 
+.form-control:focus{
+    outline: none !important;
 }
