--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
   border: 0;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 body {
   background-color: #ffff;
   color: #323335;
