--- a/src/pages/Home/BuyerCart.css
+++ b/src/pages/Home/BuyerCart.css
@@ -42,7 +42,22 @@
     border: 1px solid #ED881C
 }
 
-
+.quantitycart-div{
+    border: 1px solid #C4C4C4;
+    width: 120px;
+    padding: 8px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.quantitycart-div i.mdi-minus{
+    font-size: 20px;
+    cursor: pointer;
+}
+i.mdi-minus.disabled{
+    pointer-events: none;
+    opacity: 0.65;
+}
 
 /* Media query for smaller phones */
 
