--- a/src/pages/Home/BuyerCart.css
+++ b/src/pages/Home/BuyerCart.css
@@ -1,6 +1,9 @@
 .cart-title{
     display: flex;
 }
+.no-title{
+    display: none;
+}
 .cartImage{
     width: 140px;
     height: 150px;
@@ -57,6 +60,13 @@
 i.mdi-minus.disabled{
     pointer-events: none;
     opacity: 0.65;
+}
+
+.cartIcon{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: white;
 }
 
 /* Media query for smaller phones */
