--- a/src/pages/Farmers/FarmersDashboard/FarmersDashboard.css
+++ b/src/pages/Farmers/FarmersDashboard/FarmersDashboard.css
@@ -77,6 +77,7 @@ padding: 30px;
     align-items: center;
     justify-content: center;
     padding: 10px 20px; 
+    cursor: pointer;
 }
 .pagination{
     width: 40px;
