--- a/src/pages/Farmers/FarmersProfile/FarmersProfile.css
+++ b/src/pages/Farmers/FarmersProfile/FarmersProfile.css
@@ -14,6 +14,30 @@
     opacity: .65;
     pointer-events: none;
 }
-  input[type="file"] {
+  input[type="file"].photo {
     display: none;
 }
+
+.file_upload {
+    opacity: 0.0;
+ 
+    /* IE 8 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+ 
+    /* IE 5-7 */
+    filter: alpha(opacity=0);
+  
+    /* Netscape or and older firefox browsers */
+    -moz-opacity: 0.0;
+ 
+    /* older Safari browsers */
+    -khtml-opacity: 0.0;
+ 
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height:100%;
+ }
