--- a/src/components/SideBar.css
+++ b/src/components/SideBar.css
@@ -93,6 +93,11 @@
   overflow: hidden;
 }
 
+.sidebar-btn-wrapper .sidebar-btn.disabled{
+  pointer-events: none;
+  opacity: 0.6;
+}
+
 .sidebar-btn-wrapper .sidebar-btn span{
 
   font-size: 13px;
